# lumigrid

./: BUILD.sh  CMakeLists.txt  COMPREHENSIVE_FINAL_REPORT.md  FINAL_SUMMARY.md  PHASE2_3_COMPLETE.md  PROJECT_REPORT.md  QUICK_START.md  README.md  STATUS.txt  julesreport.md  partitions.csv  sdkconfig.defaults
.github/: copilot-instructions.md
.kilocode/rules/: log heap and loop timings on boot and after 60s of playback.md  void dynamic allocations inside the render loop—use preallocated buffers.md
Docs/: 1.md  2.md  3.md  4.md  AGENT_TASKS.md  ARCHITECTURE.md  DEV_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  api_spec.yaml  components_led_effects_README.md  components_led_effects_effects.c  components_led_effects_effects.h  webuibase.md
firmware/: BUILD_GUIDE.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
firmware/assets/webapp/: index.html
firmware/components/aled_rmt/: CMakeLists.txt  aled_rmt.c
firmware/components/led_effects/: CMakeLists.txt  effects.c  fx_blend.c  fx_palette.c  fx_segments.c  fx_transitions.c  fx_util.c  led_effects.c
firmware/components/mqtt_wrapper/: CMakeLists.txt  mqtt_wrapper.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  lednode_init.c  lednode_init.h
firmware/main/config/: board_pinmap.h  default_config.json  version.h
firmware/main/tasks/: task_effect_engine.c  task_effect_engine.h  task_mqtt_client.c  task_pwm_driver.c  task_pwm_driver.h  task_rest_server.c  task_sync_manager.c  task_ui_fs.c  task_wifi.c  task_wifi.h
firmware/main/test/: CMakeLists.txt  test_fx_crc.c
firmware/main/tests/: test_config_merge.c  test_fx_crc.c  test_pca9685_driver.c  test_pwm_groups.c
firmware/main/utils/: diagnostics.c  json_config.c  power_budget.c  power_budget.h  scheduler.c  self_test.c  self_test.h  trigger_engine.c  trigger_engine.h
main/: CMakeLists.txt  app_main.c  config.c  config.h  led_driver.c  led_driver.h  mapper.c  mapper.h  protocol.c  protocol.h  web_server.c  web_server.h  wifi.c  wifi.h
scripts/: send_frame.py
(+25 files in other folders)
